--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
     <section id="scores-input-container">
       <h2>Add your score</h2>
       <form>
-        <input type="text" name="name" id="name" placeholder="Your name">
-        <input type="number" name="score" id="score" placeholder="Your score">
+        <input type="text" name="name" id="name" placeholder="Your name" minlength="2" maxlength="30">
+        <input type="number" name="score" id="score" placeholder="Your score" min="0" max="1000">
         <button type="submit" id="submit-btn">Submit</button>
       </form>
     </section>
