Add popup notification for scores submission

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,12 @@
         <button type="submit" id="submit-btn">Submit</button>
       </form>
     </section>
+    
+    <!-- Notification Popup -->
+    <div id="notification">
+      <h2>Thank You!</h2>
+      <p>Your scores have been submitted successfully.</p>
+    </div>
   </main>
 </body>
 
