--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
     
     <!-- Notification Popup -->
     <div id="notification">
-      <h2>Thank You!</h2>
-      <p>Your scores have been submitted successfully.</p>
+      <span id="popup">
+        <h2>Thank You!</h2>
+        <p>Your scores have been submitted successfully.</p>
+      </span>
     </div>
   </main>
 </body>
