--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button type="button" id="refresh-btn">Refresh</button>
       </div>
       <ul id="scores-list">
-
+        <!-- Scores will be dynamically added here -->
       </ul>
     </section>
 
@@ -36,7 +36,7 @@
         <button type="submit" id="submit-btn">Submit</button>
       </form>
     </section>
-    
+
     <!-- Notification Popup -->
     <div id="notification">
       <span id="popup">
