--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
   <header>
-    <h1>Leaderboard</h1>
+    <h1>
+      Leaderboard
+      <span>🏆</span>
+    </h1>
   </header>
 
   <main>
@@ -35,16 +38,24 @@
         </label>
         <button type="submit" id="submit-btn">Submit</button>
       </form>
-    </section>
 
-    <!-- Notification Popup -->
-    <div id="notification">
-      <span id="popup">
-        <h2>Thank You!</h2>
-        <p>Your scores have been submitted successfully.</p>
-      </span>
-    </div>
+      <!-- Notification Popup -->
+      <div id="notification">
+        <span id="popup">
+          <h2>Thank You!</h2>
+          <p>Your scores have been submitted successfully.</p>
+        </span>
+      </div>
+    </section>
   </main>
+
+  <footer>
+    <p class="copyright">© Copyright 2023 
+      <a target="_blank" rel="noopener noreferrer" href="https://github.com/mnisarali">
+        Muhammad Nisar Ali
+      </a> | All Rights Reserved
+    </p>
+  </footer>
 </body>
 
 </html>
