--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="icon" type="image/svg+xml" href="/src/crown.png">
   <title>Leaderboard</title>
 </head>
 
@@ -13,7 +14,7 @@
   <header>
     <h1>
       Leaderboard
-      <span>🏆</span>
+      <img src="/src/crown.png"></img>
     </h1>
   </header>
 
