--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="icon" type="image/svg+xml" href="/src/crown.png">
+  <link rel="icon" type="image/svg+xml" href="../src/crown.ico">
   <title>Leaderboard</title>
   <script defer src="main.js"></script></head>
 
@@ -14,7 +14,7 @@
   <header>
     <h1>
       Leaderboard
-      <img src="/src/crown.png"></img>
+      <img src="../src/crown.ico"></img>
     </h1>
   </header>
 
