--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <!-- <link rel="icon" type="image/svg+xml" href="images/crown.png"> -->
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <title>Leaderboard</title>
-<script defer src="main.js"></script></head>
+<link rel="icon" href="favicon.ico"><script defer src="main.js"></script></head>
 
 <body>
   <header>
